@@ -428,7 +428,7 @@ public class TransaksiService {
             String title = "Laporan Penjualan Alat Tulis Kantor";
             DateTimeFormatter dateFormatter = DateTimeFormatter.ofPattern("dd MMMM yyyy");
             String currentDate = LocalDate.now().format(DateTimeFormatter.ofPattern("dd/MM/yyyy"));
-            NumberFormat numberFormat = NumberFormat.getCurrencyInstance(new Locale("id", "ID"));
+            NumberFormat numberFormat = NumberFormat.getCurrencyInstance(Locale.of("id", "ID"));
             String[] headerValue = {"No", "Nomor Transaksi", "Tanggal Transaksi", "Nama Pelanggan", "Nama Barang", "Harga", "Jumlah", "Total", "Kasir"};
 
             int numberData = 0;
